Stage 2/5. requests.get is moved from print_quote to __init__ and stored as class attribute, it makes more sense. Use of BeautifulSoup library. print_quote() is now print_title_description().

--- a/Web Scraper/The Beautiful Soup Ingredients/task-info.yaml
+++ b/Web Scraper/The Beautiful Soup Ingredients/task-info.yaml
@@ -74,5 +74,8 @@ files:
     \ == '__main__':\n    WebScraperTest().run_tests()\n"
   learner_created: false
 feedback_link: https://hyperskill.org/projects/145/stages/782/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Sat, 02 Oct 2021 16:27:51 UTC
 record: -1
