Stage 3/5. Removed use of BeautifulSoup library, not needed in this stage. Removed method print_title_description. Created methods status and save_to_file.

--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -4,3 +4,10 @@ content:
 - Get the paragraph
 - Get the title
 - Get the hyperlink
+- Caesar cipher
+- Printable
+- Chr() application
+- Ord() application
+- To_bytes()
+- Decypher a message
+- Bytes slices
