--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/455321/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Mon, 27 Sep 2021 20:54:42 UTC
+update_date: Sat, 09 Oct 2021 09:36:57 UTC
 stages:
 - id: 781
   step: 11755
@@ -13,7 +13,7 @@ stages:
   is_completed: true
 - id: 783
   step: 11757
-  is_completed: false
+  is_completed: true
 - id: 784
   step: 11758
   is_completed: false
