Stage 5/5. Init updated with new attributes. Soup is now instantiated in the loop in save_articles method (former save_news). Now save_articles loops through N webpages to store articles of desired type from each webpage in different directories.

--- a/Web Scraper/Soup, Sweet Soup/task-info.yaml
+++ b/Web Scraper/Soup, Sweet Soup/task-info.yaml
@@ -123,6 +123,25 @@ files:
     if __name__ == '__main__':
         WebScraperTest().run_tests()
   learner_created: false
+- name: source.html
+  visible: true
+  text: |
+    <html>
+    <head>
+      <title>warming up</title>
+      <link rel="stylesheet" type="text/css" href="../style.css">
+    </head>
+    <body>
+    <center>
+    <img src="calc.jpg"><br>
+    <font color="gold">
+    <p>Hint: try to change the URL address.
+    </body>
+    </html>
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/145/stages/785/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Mon, 11 Oct 2021 20:16:00 UTC
 record: -1
