--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/455321/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Sat, 09 Oct 2021 09:36:57 UTC
+update_date: Mon, 11 Oct 2021 19:29:36 UTC
 stages:
 - id: 781
   step: 11755
@@ -19,7 +19,7 @@ stages:
   is_completed: true
 - id: 785
   step: 11759
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: World Wide Web
